--- a/sass/blocks/_promo.scss
+++ b/sass/blocks/_promo.scss
@@ -12,11 +12,11 @@
             color: #fff;
         }
         &__title {
-            font-size: 42px;
+            @include adaptiv-font (42, 21);
             text-transform: uppercase;
         }
         &__subtitle {
-            font-size: 24px;
+            @include adaptiv-font (24, 12);
             text-transform: uppercase;
             font-weight: 100;
         }
@@ -26,11 +26,17 @@
             text-align: center;
         }
         &__card {
-            height: 96px;
+            max-width: 136px;
+            max-height: 96px;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: space-between;
+        }
+        &__icon{
+            max-height: 44px;
+            max-width: 40px;
+            // width: 100%;
         }
 
         &__text {
