Адаптив advantages и consult.

--- a/sass/blocks/_consultations.scss
+++ b/sass/blocks/_consultations.scss
@@ -3,6 +3,8 @@
     min-height:680px;
     color: #fff;
     padding: 100px 0 108px 0;
+    // display: flex;
+    // justify-content: center;
 
     &__descr {
         font-size: 20px;
