--- a/sass/base/_media.scss
+++ b/sass/base/_media.scss
@@ -1,29 +1,34 @@
 @media(max-width: 1200px) {
 	.container {
-		max-width: 970px;
+		// max-width: 970px;
 	}
 }
 
 @media(max-width: 992px) {
 	.container {
-		max-width: 750px;
+		// max-width: 750px;
 	}
 
 	.promo {
 		background: url('../img/bg/promo_bg.png') 25% (center/cover) no-repeat;
 	}
+
+	.advantages {
+		&__cards {
+			justify-content: space-around;
+
+		}
+	}
 }
-
-
-
 
 @media(max-width: 767px) {
 	.container {
-		max-width: none;
+		// max-width: none;
 	}
-		.header {
+
+	.header {
 		&__official {
-			margin:0 10px;
+			margin: 0 10px;
 		}
 	}
 }
@@ -31,23 +36,12 @@
 @media(max-width: 651px) {
 	.header {
 		justify-content: space-around;
-		&__official {
-			padding-top: 20px;
-			// order: 2;
-		}
-	}
-}
 
-@media(max-width: 575px) {
-
-	.container {
-		padding: 0 4px;
-	}
-	.header{
 		&__phone {
 			font-size: 14px;
 		}
 	}
+
 	.promo {
 		background: url('../img/bg/promo_bg.png') 25% (center/cover) no-repeat;
 
@@ -66,18 +60,24 @@
 			padding-top: 10px;
 		}
 	}
-
+	.form-wrapper{
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+	
 }
 
-@media(max-width: 410px) {
-	.header {
-		justify-content: space-around;
-
-		&__contacts {
-			padding-top: 20px;
+@media(max-width: 575px) {
+	.consultation {
+		&__descr {
+			font-size: 16px;
 		}
 	}
+}
 
+@media(max-width: 470px) {
 	.button {
 		&_main {
 			width: 240px;
@@ -85,10 +85,11 @@
 	}
 
 }
-@media(max-width: 343px) {
+
+@media(max-width: 362px) {
 	.header {
 		&__official {
-			padding-top: 20px;
+			padding-bottom: 20px;
 			order: 0;
 		}
 	}
@@ -99,13 +100,16 @@
 		&__cards {
 			display: none;
 		}
+
 		&__subtitle {
 			margin-bottom: 60px;
 		}
-		&__link{
+
+		&__link {
 			font-size: 0.8rem;
 		}
 	}
+
 	.button {
 		&_main {
 			font-size: 14px;
