--- a/sass/blocks/_advantages.scss
+++ b/sass/blocks/_advantages.scss
@@ -7,12 +7,14 @@
     &__cards {
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
     }
 
     &__card {
         padding-top: 60px;
         text-align: center;
         width: 269px;
+     
 
         &-icon {
             margin-bottom: 30px;
