--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -7,6 +7,7 @@
     &__logo{
         width: 250px;
         margin-right: 10px;
+        margin-bottom: 20px;
         img{
             width: 100%;
         }
